2005-01-28  mallum,,,  <mallum@openedhand.com>

	* src/button.c:
	* src/callbacks.c: (on_about_activate), (on_delete_event_hide),
	(on_select_device):
	* src/callbacks.h:
	* src/config.c: (config_get_val):
	* src/fakedev.h:
	* src/keys.c: (keys_xnest_connect):
	* src/main.c: (fakeapp_new), (fakeapp_create_gui):
	* src/prefs.c: (on_prefs_apply_clicked):
	* src/prefs.h:
	Just run through gnu indent.	

2005-01-28  mallum,,,  <mallum@openedhand.com>

	* configure.ac:
	Bump Up version

	* data/Makefile.am:
	* data/xoo.desktop:
	* data/xoo.svg:
	Add an icon for .dotdesktop

	* data/Xoo.glade:
	* src/callbacks.c: (on_about_activate), (on_delete_event_hide):
	* src/callbacks.h:
	* src/fakedev.h:
	* src/main.c: (fakeapp_new), (fakeapp_create_gui), (key_event),
	(fakeapp_start_server), (fakeapp_catch_sigchild),
	(fakeapp_restart_server), (usage), (main):
	* src/prefs.c: (gconf_prefs_init), (on_prefs_apply_clicked):
	* src/prefs.h:
	Add support for: 
            - Setting command to run on startup
            - Changing device on the fly ( via very nasty hack )
	Also wrap some code at 80 chars.    

2005-01-25  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am:
	* data/xoo.desktop:
	Added .desktop file

2005-01-12  mallum,,,  <mallum@openedhand.com>

	* website/default.css:
	* website/index.html:
	Update website, renaming.
	* TODO:
	Added.

2005-01-12  mallum,,,  <mallum@openedhand.com>

	* README:
	* configure.ac:
	* data/Makefile.am:
	* data/Xoo.glade:
	* data/matchbox-nest.glade:
	* src/Makefile.am:
	* src/button.c:
	* src/callbacks.c:
	* src/config.c:
	* src/fakedev.h:
	* src/keys.c:
	* src/main.c: (fakeapp_new):
	* src/prefs.c:
	* src/prefs.h:
	Rename matchbox-nest -> Xoo

2004-12-03  mallum,,,  <mallum@openedhand.com>

	* Makefile.am:
	Add snapshot target
	* src/prefs.c: (onpreferences_activate):
	Remove unused var.

2004-12-02  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	Bump version.

	* src/prefs.c: